--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <title>Oz Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Home</a>
+      <!-- navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex-row-reverse">
+        <a class="navbar-brand" href="#">Explore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-            </li>
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Works</a>
             </li>
@@ -29,12 +33,9 @@
             </li>
           </ul>
         </div>
-      </nav>
-    <div class="container">
-        <header class="bg-info">
-
-        </header>
-    </div>
+      </nav> <!-- /navigation -->
+    <div class="container"> <!-- container -->
+    </div> <!-- container -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
