--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <!-- navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex-row-reverse">
-        <a class="navbar-brand" href="#">Explore</a>
+        <a class="navbar-brand" href="#">Osman Kamara</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="#">About</a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Works</a>
+              <a class="nav-link" href="#">Adventures</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
