Adds landing page img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
 
     <title>Oz Portfolio</title>
   </head>
@@ -34,6 +35,7 @@
           </ul>
         </div>
       </nav> <!-- /navigation -->
+      <img class="landing" src="../images/AdobeStock_264558719_Preview.jpeg" alt="">
     <div class="container"> <!-- container -->
     </div> <!-- container -->
 
