--- a/index.html
+++ b/index.html
@@ -12,30 +12,37 @@
     <title>Oz Portfolio</title>
   </head>
   <body>
-      <!-- navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex-row-reverse">
-        <a class="navbar-brand" href="#">Osman Kamara</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Adventures</a>
+    <nav class="navbar navbar-expand-lg flex-row-reverse"> <!-- navigation -->
+      <a class="navbar-brand" href="#">Osman Kamara</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">About</a>
             </li>
-          </ul>
-        </div>
-      </nav> <!-- /navigation -->
-      <img class="landing" src="../images/AdobeStock_264558719_Preview.jpeg" alt="">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Adventures</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav> <!-- /navigation -->
+    
+    <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
+      <div class="container">
+        <h1 class="display-2 mt-5 pt-3 text-black text-center">Hello! I'm Oz</h1>
+        <p class="lead text-center">A Creative Full-Stack Web Developer</p>
+        <p class="lead text-center">On A Journey To</p>
+      </div>
+    </div> <!-- /jumbotron -->
+
     <div class="container"> <!-- container -->
     </div> <!-- container -->
 
