--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg flex-row-reverse"> <!-- navigation -->
-      <a class="navbar-brand" href="#">Osman Kamara</a>
+      <a class="navbar-brand" href="#">Full-Stack Developer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,16 +34,52 @@
         </ul>
       </div>
     </nav> <!-- /navigation -->
-    
-    <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
-      <div class="container">
-        <h1 class="display-2 mt-5 pt-3 text-black text-center">Hello! I'm Oz</h1>
+
+    <nav class="navbar navbar-expand-lg flex-row-reverse second"> <!-- 2nd navigation -->
+      <a class="navbar-brand" href="#">Osman Kamara</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Adventures</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav> <!-- /2nd navigation -->
+
+    <div class="jumbotron"> <!-- jumbotron -->
+      <div class="container jumbotron-container">
+        <h1 class="display-2 mt-5 pt-4 text-black text-center">Hello! I'm Oz</h1>
         <p class="lead text-center">A Creative Full-Stack Web Developer</p>
         <p class="lead text-center">On A Journey To</p>
       </div>
     </div> <!-- /jumbotron -->
 
     <div class="container"> <!-- container -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>ABOUT</h3>
+          </div>
+          <div class="col">
+            <img src="images/rsz_img_0705.jpg" alt="">
+          </div>
+          <div class="col">
+            <h3>SKILLS</h3>
+          </div>
+        </div>
+      </div>
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
