--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <title>Oz Portfolio</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg flex-row-reverse"> <!-- navigation -->
+  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
+   
+    <!-- <nav class="navbar navbar-expand-lg navbar-light flex-row-reverse first" style="background-color: firebrick;"> 
       <a class="navbar-brand" href="#">Full-Stack Developer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,10 +21,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Adventures</a>
@@ -33,9 +34,9 @@
           </li>
         </ul>
       </div>
-    </nav> <!-- /navigation -->
+    </nav>  -->
 
-    <nav class="navbar navbar-expand-lg flex-row-reverse second"> <!-- 2nd navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: rgb(167, 63, 63);"> <!-- 2nd navigation -->
       <a class="navbar-brand" href="#">Osman Kamara</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -43,10 +44,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Adventures</a>
@@ -58,16 +59,20 @@
       </div>
     </nav> <!-- /2nd navigation -->
 
-    <div class="jumbotron"> <!-- jumbotron -->
-      <div class="container jumbotron-container">
-        <h1 class="display-2 mt-5 pt-4 text-black text-center">Hello! I'm Oz</h1>
+    <div class="jumbotron jumbotron-fluid text-firebrick"> <!-- jumbotron -->
+      <div class="container text-sm-center pt-5 jumbotron-container">
+        <h1 class="display-2 mt-5 pt-4 text-black text-center jumbo-h1">Hello! I'm Oz</h1>
         <p class="lead text-center">A Creative Full-Stack Web Developer</p>
         <p class="lead text-center">On A Journey To</p>
+        <svg width="16" height="16" fill="currentColor" class="down" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        </svg>
       </div>
     </div> <!-- /jumbotron -->
 
     <div class="container"> <!-- container -->
-      <div class="container">
+      <div id="about" class="container">
         <div class="row">
           <div class="col">
             <h3>ABOUT</h3>
@@ -87,5 +92,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
