Change jumbotron <p> to <h3> & <h4>

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </nav>  -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: rgb(167, 63, 63);"> <!-- 2nd navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: crimson;"> <!-- 2nd navigation -->
       <a class="navbar-brand" href="#">Osman Kamara</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,10 +60,10 @@
     </nav> <!-- /2nd navigation -->
 
     <div class="jumbotron jumbotron-fluid text-firebrick"> <!-- jumbotron -->
-      <div class="container text-sm-center pt-5 jumbotron-container">
+      <div class="container text-center pt-1 jumbotron-container">
         <h1 class="display-2 mt-5 pt-4 text-black text-center jumbo-h1">Hello! I'm Oz</h1>
-        <p class="lead text-center">A Creative Full-Stack Web Developer</p>
-        <p class="lead text-center">On A Journey To</p>
+        <h3 class="text-center">A Creative Full-Stack Web Developer</h3>
+        <h4 class="text-center">On A Journey To</h4>
         <svg width="16" height="16" fill="currentColor" class="down" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
           <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
