--- a/index.html
+++ b/index.html
@@ -12,31 +12,17 @@
     <title>Oz Portfolio</title>
   </head>
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
-   
-    <!-- <nav class="navbar navbar-expand-lg navbar-light flex-row-reverse first" style="background-color: firebrick;"> 
-      <a class="navbar-brand" href="#">Full-Stack Developer</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Adventures</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>  -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: crimson;"> <!-- 2nd navigation -->
+    <nav class="first"> 
+      <h4 class="first-stack">Full-Stack</h4>
+      <svg width="16" height="16" fill="currentColor" class="down" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+      </svg>
+      <h4 class="first-developer">Developer</h4>
+    </nav> 
+
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: rgb(110, 10, 30);"> <!-- 2nd navigation -->
       <a class="navbar-brand" href="#">Osman Kamara</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,15 +45,11 @@
       </div>
     </nav> <!-- /2nd navigation -->
 
-    <div class="jumbotron jumbotron-fluid text-firebrick"> <!-- jumbotron -->
-      <div class="container text-center pt-1 jumbotron-container">
-        <h1 class="display-2 mt-5 pt-4 text-black text-center jumbo-h1">Hello! I'm Oz</h1>
-        <h3 class="text-center">A Creative Full-Stack Web Developer</h3>
-        <h4 class="text-center">On A Journey To</h4>
-        <svg width="16" height="16" fill="currentColor" class="down" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-          <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-        </svg>
+    <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
+      <div class="container text-center jumbotron-container">
+        <!-- <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
+        <h3 class="text-center">TO</h3> -->
+        <!-- <h4 class="text-center">Journey To</h4> -->
       </div>
     </div> <!-- /jumbotron -->
 
