--- a/index.html
+++ b/index.html
@@ -55,20 +55,17 @@
 
     <div class="container"> <!-- container -->
       <div id="about">
-        <h3 class="text-center about-h3">ABOUT</h3>
         <div class="row">
-          <div class="col-6 mt-5">
-            <p class="word-wrap text-break">I am a Full-Stack web developer with skills in JavaScript, Node, Express, SQL and React. Absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
+          <div class="col-6">
+            <h3 class="text-center about-h3">ABOUT</h3>
+            <p class="word-wrap about-text">I am a Full-Stack web developer with skills in JavaScript, Node, Express, SQL and React. Absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
               
               looking forward to applying my previous work experience from various industries and my daily becoming web developer skills to a new career in tech.</p>
           </div>
-          <div class="col-6 mt-5">
+          <div class="col-6 mt-5 image-div">
             <img class="self" src="images/rsz_img_0705.jpg" alt="">
-          </div>
-          <div class="col-12">
-            <h3>SKILLS</h3>
           </div>
         </div>
       </div>
