Uncomment jumboton top layer div

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
     <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
       <div class="container text-center jumbotron-container">
-        <!-- <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
+        <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
         <h3 class="text-center">TO</h3>
-        <h4 class="text-center">Journey To</h4> -->
+        <h4 class="text-center">Journey To</h4>
       </div>
     </div> <!-- /jumbotron -->
 
