Adds list groups

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <div class="container-fluid main"> <!-- container -->
       <div id="about">  <!-- ABOUT -->
         <div class="row">
-          <div class="col-12 text-center about-row">
-            <h3 class=" display-2 text-center font-weight-bold font-italic about-h3">ABOUT</h3>
+          <div class="col-12  about-row">
+            <h3 class=" display-2 text-center mt-5 font-weight-bold font-italic about-h3">ABOUT</h3>
             <p class="word-wrap about-text">I am a Full-Stack web developer with skills in JavaScript, Node, Express, SQL and React. Absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
@@ -65,8 +65,43 @@
               looking forward to applying my previous work experience from various industries and my daily becoming web developer skills to a new career in tech.</p>
           </div>
         </div>
-      </div> <!-- /ABOUT -->
-    
+        <h3 class=" display-4 mb-5 text-center font-weight-bold font-italic about-h3">SKILLS</h3>
+        <div class="row skills">
+          <div class="col-lg order-lg-3">
+            <h3 class="mb-4 font-weight-bold">FRONTEND :</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+            </div>
+          </div>
+          <div class="col-lg order-lg-3">
+            <h3 class="mb-4 font-weight-bold">BACKEND :</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+            </div>
+          </div>
+          <div class="col-lg order-lg-3">
+            <h3 class="mb-4 font-weight-bold">FUTURE LEARNINGS :</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+            </div>
+          </div>
+        </div>
+      </div>  <!-- /ABOUT -->   
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
