Adds skills list

--- a/index.html
+++ b/index.html
@@ -70,34 +70,31 @@
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold">FRONTEND :</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>JavaScript</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>HTML</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>CSS</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>jQuery</strong></a>
             </div>
           </div>
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold">BACKEND :</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>SQL</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Place Holder</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Place Holder</strong></a>
             </div>
           </div>
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold">FUTURE LEARNINGS :</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong>: NoSQL database</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Ruby On Rails</strong>: Framework for Node</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>MangoDB</strong>: JavaScript library</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>PHP</strong>: JavaScript environment</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>JAVA</strong>: Latest version of JavaScript</a>
             </div>
           </div>
         </div>
