Adds portfolio div

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Adventures</a>
+            <a class="nav-link" href=".portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -47,9 +47,9 @@
 
     <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
       <div class="container text-center jumbotron-container">
-        <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
+        <!-- <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
         <h3 class="text-center">TO</h3>
-        <h4 class="text-center">Journey To</h4>
+        <h4 class="text-center">Journey To</h4> -->
       </div>
     </div> <!-- /jumbotron -->
 
@@ -57,15 +57,15 @@
       <div id="about">  <!-- ABOUT -->
         <div class="row">
           <div class="col-12  about-row">
-            <h3 class=" display-2 text-center mt-5 font-weight-bold font-italic about-h3">ABOUT</h3>
-            <p class="word-wrap about-text">I am a Full-Stack web developer with skills in JavaScript, Node, Express, SQL and React. Absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
+            <h3 class="display-2 text-center mt-5 font-weight-bold font-italic about-h3">ABOUT</h3>
+            <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
               
               looking forward to applying my previous work experience from various industries and my daily becoming web developer skills to a new career in tech.</p>
           </div>
         </div>
-        <h3 class=" display-4 mb-5 text-center font-weight-bold font-italic about-h3">SKILLS</h3>
+        <h3 class="display-4 mb-5 text-center font-weight-bold font-italic about-h3">SKILLS</h3>
         <div class="row skills">
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold">FRONTEND :</h3>
@@ -90,15 +90,18 @@
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold">FUTURE LEARNINGS :</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong>: NoSQL database</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>Ruby On Rails</strong>: Framework for Node</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>MangoDB</strong>: JavaScript library</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>PHP</strong>: JavaScript environment</a>
-              <a href="#" class="list-group-item list-group-item-action"><strong>JAVA</strong>: Latest version of JavaScript</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Ruby On Rails</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>MangoDB</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>PHP</strong></a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>JAVA</strong></a>
             </div>
           </div>
         </div>
       </div>  <!-- /ABOUT -->   
+      <div class="portfolio">
+        <h3 class="display-2 text-center pt-5 font-weight-bold font-italic text-uppercase">Portfolio</h3>
+      </div>
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
