Adds class to portfolio h3

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href=".portfolio">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -99,8 +99,8 @@
           </div>
         </div>
       </div>  <!-- /ABOUT -->   
-      <div class="portfolio">
-        <h3 class="display-2 text-center pt-5 font-weight-bold font-italic text-uppercase">Portfolio</h3>
+      <div id="portfolio">
+        <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
       </div>
     </div> <!-- container -->
 
