Adds carousel div & figure tags

--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
       </div>  <!-- /ABOUT -->   
       <div id="portfolio">
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
+        <div class="carousel"></div>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
+        <figure><img src="images/1.jpg" alt=""></figure>
       </div>
     </div> <!-- container -->
 
