Adds portfolio images container

--- a/index.html
+++ b/index.html
@@ -101,18 +101,44 @@
       </div>  <!-- /ABOUT -->   
       <div id="portfolio">
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
-        <div class="carousel"></div>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-        <figure><img src="images/1.jpg" alt=""></figure>
-      </div>
+
+        <div class="row skills">
+          <div class="col-lg order-lg-3">
+            <div>
+              <img class="port-image" src="images/webapp.jpg" alt="">
+            </div>            
+          </div>
+          <div class="col-lg order-lg-3">
+            <div>
+              <img class="port-image" src="images/fst.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg order-lg-3 port-image">
+            <div>
+              <img class="port-image" src="images/emp.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg order-lg-3 port-image">
+            <div>
+              <img class="port-image" src="images/game.png" alt="">
+            </div>
+          </div>
+        </div>
+        <!-- <div class="galery">
+          <div class="carousel">
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+            <figure><img src="images/copy.jpg" alt=""></figure>
+          </div>
+      </div> -->
+        </div>
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
