Adds classes to cube elements

--- a/index.html
+++ b/index.html
@@ -102,41 +102,17 @@
       <div id="portfolio">
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
 
-        <div class="row skills">
-          <div class="col-lg order-lg-3">
-            <div>
-              <img class="port-image" src="images/webapp.jpg" alt="">
+        <div class="row port-container content text-center">
+          <div class="col-lg order-lg-12 cube-container">
+            <div class="port-div photo-cube">
+              <img class="port-image front" src="images/wapp.png" alt="">
+              <img class="port-image back" src="images/fst.png" alt="">
+              <img class="port-image left" src="images/emp.png" alt="">
+              <img class="port-image wheel right" src="images/game.png" alt="">
             </div>            
           </div>
-          <div class="col-lg order-lg-3">
-            <div>
-              <img class="port-image" src="images/fst.png" alt="">
-            </div>
-          </div>
-          <div class="col-lg order-lg-3 port-image">
-            <div>
-              <img class="port-image" src="images/emp.png" alt="">
-            </div>
-          </div>
-          <div class="col-lg order-lg-3 port-image">
-            <div>
-              <img class="port-image" src="images/game.png" alt="">
-            </div>
           </div>
         </div>
-        <!-- <div class="galery">
-          <div class="carousel">
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-            <figure><img src="images/copy.jpg" alt=""></figure>
-          </div>
       </div> -->
         </div>
     </div> <!-- container -->
