--- a/index.html
+++ b/index.html
@@ -99,22 +99,87 @@
           </div>
         </div>
       </div>  <!-- /ABOUT -->   
-      <div id="portfolio">
+      <div id="portfolio"> <!-- PORTFOLIO --> 
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
 
-        <div class="row port-container content text-center">
+        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"> <!-- Wepapp modalview --> 
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content wepapp-modal-content">
+              <h1 class="mb-4 text-center text-light pb-solid">WebApp Dashboard</h1>
+              <div class="row modal-row">
+                <div class="col-lg-6 p-*-5 modal-view">
+                  <img class="rotate-img-div" src="images/wapp.png" alt="">
+                </div>
+                <div class="col-lg-6 wepapp-modal-view">
+                  <p class="word-wrap text-light">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
+                    look at browsing history, get notification on things that needs to get done, and interract with other users via messaging. I built this web app with <span>HTML</span> for skeleton, <span>CSS</span> for design, <span>SASS</span>
+                    for ease of organization & layout, & <span>JavaScript</span> for functionality.</p>
+                </div>
+              </div>
+        
+            </div>
+          </div>
+        </div> <!-- /Wepapp modal view --> 
+
+        <div class="modal fade bd-backexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content fsk-modal-content">
+              <h1 class="mb-4 text-center text-light pb-solid">Full Stack App with React and a REST-API</h1>
+              <div class="row modal-row">
+                <div class="col-lg-6 p-*-5 modal-view">
+                  <img class="rotate-img-div" src="images/fsk.png" alt="">
+                </div>
+                <div class="col-lg-6 fsk-modal-view">
+                  <p class="word-wrap text-light">Created a full-stack school database application, that users can interact with by getting a list of courses, 
+                    view details for a specific course, as well as creating, updating, and deleting courses in the database. All is able to view any course, but the creation
+                    of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
+                    Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
+                    The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal fade bd-leftexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              TEST 3
+            </div>
+          </div>
+        </div>
+
+        <div class="modal fade bd-rightexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              TEST 4
+            </div>
+          </div>
+        </div>
+
+        <div class="row port-container content">
           <div class="col-lg order-lg-12 cube-container">
             <div class="port-div photo-cube">
-              <img class="port-image front" src="images/wapp.png" alt="">
-              <img class="port-image back" src="images/fst.png" alt="">
-              <img class="port-image left" src="images/emp.png" alt="">
-              <img class="port-image wheel right" src="images/game.png" alt="">
+              <div class="front">
+                <img class="rotate-img-div" src="images/wapp.png" alt="">
+                <button type="button" class="btn view-details front-button" data-toggle="modal" data-target=".bd-example-modal-lg">View Details</button>
+              </div>
+              <div class="back">
+                <img class="rotate-img-div" src="images/fsk.png" alt="">
+                <button type="button" class="btn view-details back-button" data-toggle="modal" data-target=".bd-backexample-modal-lg">View Details</button>
+              </div>
+              <div class="left">
+                <img class="rotate-img-div" src="images/emp.png" alt="">
+                <button type="button" class="btn view-details left-button" data-toggle="modal" data-target=".bd-leftexample-modal-lg">View Details</button>
+              </div>
+              <div class="right">
+                <img class="rotate-img-div" src="images/game.png" alt="">
+                <button type="button" class="btn view-details right-button" data-toggle="modal" data-target=".bd-rightexample-modal-lg">View Details</button>
+              </div>
             </div>            
           </div>
           </div>
-        </div>
-      </div> -->
-        </div>
+        </div> <!-- /PORTFOLIO --> 
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
