Adds modal content to game show app section of cube box

--- a/index.html
+++ b/index.html
@@ -144,15 +144,36 @@
         <div class="modal fade bd-leftexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-              TEST 3
+              <h1 class="mb-4 text-center text-light pb-solid">Full Stack App with React and a REST-API</h1>
+              <div class="row modal-row">
+                <div class="col-lg-6 p-*-5 modal-view">
+                  <img class="rotate-img-div" src="images/fsk.png" alt="">
+                </div>
+                <div class="col-lg-6 fsk-modal-view">
+                  <p class="word-wrap text-light">Created a full-stack school database application, that users can interact with by getting a list of courses, 
+                    view details for a specific course, as well as creating, updating, and deleting courses in the database. All is able to view any course, but the creation
+                    of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
+                    Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
+                    The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="modal fade bd-rightexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-              TEST 4
+            <div class="modal-content game-modal-content">
+              <h1 class="mb-4 text-center text-light pb-solid">Game Show App</h1>
+              <div class="row modal-row">
+                <div class="col-lg-6 p-*-5 modal-view">
+                  <img class="rotate-img-div popup-images" src="images/game.png" alt="">
+                </div>
+                <div class="col-lg-6 fsk-modal-view">
+                  <p class="word-wrap text-light">In this project, I created a browser version of "Wheel of fortune", a word guessing game where players will click letters from an
+                     onscreen or physical keyboard to try to guess a random phrase.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
