Adds github and linkedin links contact images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
         <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
       </svg>
-      <h4 class="first-developer">Developer</h4>
+      <h4 class="first-developer">Developer's</h4>
     </nav> 
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top flex-row-reverse second" style="background-color: rgb(110, 10, 30);"> <!-- 2nd navigation -->
@@ -39,17 +39,17 @@
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav> <!-- /2nd navigation -->
 
     <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
-      <div class="container text-center jumbotron-container">
-        <!-- <h1 class="display-2 pt-4 text-center jumbo-h1">A JOURNEY</h1>
-        <h3 class="text-center">TO</h3>
-        <h4 class="text-center">Journey To</h4> -->
+      <div class="container-fluid text-center jumbotron-container">
+        <h1 class="display-1 text-left font-weight-bold jumbo-h1">JOURNEY</h1>
+        <h3 class="display-1 font-weight-bold jumbo-h3">TO</h3>
+        <!-- <h4 class="text-center">Journey To</h4> -->
       </div>
     </div> <!-- /jumbotron -->
 
@@ -57,7 +57,7 @@
       <div id="about">  <!-- ABOUT -->
         <div class="row">
           <div class="col-12  about-row">
-            <h3 class="display-2 text-center mt-5 font-weight-bold font-italic about-h3">ABOUT</h3>
+            <h3 class="display-2 text-center mt-5 font-weight-bold font-italic about-h3">MEET OSMAN</h3>
             <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
@@ -115,7 +115,9 @@
                   <p class="word-wrap text-light">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
                     look at browsing history, get notification on things that needs to get done, and interract with other users via messaging. I built this web app with <span>HTML</span> for skeleton, <span>CSS</span> for design, <span>SASS</span>
                     for ease of organization & layout, & <span>JavaScript</span> for functionality.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a></p></p>
+                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click To Download Files</a>
+                  </p>
                 </div>
               </div>
         
@@ -137,7 +139,9 @@
                     of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
                     Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
                     The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a></p></p>
+                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click To Download Files</a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -157,7 +161,8 @@
                     On load; using <span>JavaScript,</span> the page communicates with a third party-API(randomuser.me) to grab information for 12 random “employees,” and use that data to build a 
                     prototype for an Awesome Startup employee directory. It requests a JSON object from the API using fetch and parse the data so that 12 employees are listed in a grid with their thumbnail image, 
                     full name, email, and location. Clicking the employee’s image or name will open a modal window with more detailed information, such as the employee’s birthday and address.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a></p>
+                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click To Download Files</a></p>
                 </div>
               </div>
             </div>
@@ -177,7 +182,8 @@
                      onscreen or physical keyboard to try to guess a random phrase. I create an array of phrases and write functions to choose a random phrase from that array, split 
                      the phrase into letters, and put those letters onto the game board, giving it the required functionalities using <span>JavaScript</span>. Built the skeleton/layout of the game app with
                     <span>HTML</span>, style & design it with <span>CSS.    </span>
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a></p>
+                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click To Download Files</a></p>
                 </div>
               </div>
             </div>
@@ -207,6 +213,14 @@
           </div>
           </div>
         </div> <!-- /PORTFOLIO --> 
+
+        <div id="contact" class="contact text-center"> <!-- CONTACT --> 
+          <h3 class="display-2 text-center pt-5 font-weight-bold font-italic text-uppercase">GET IN TOUCH</h3>
+
+          <a class="text-center word-wrap d-block font-weight-bold text-dark text-uppercase" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
+          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mt-5 mr-3" src="images/linkedIn.png" alt=""></a>
+          <a href="https://github.com/osmankbk" target="_blank"> <img class="github mt-5 ml-3" src="images/github.png" alt=""></a>
+        </div> <!-- /CONTACK --> 
     </div> <!-- container -->
 
     <!-- Optional JavaScript -->
