--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
       <div class="container-fluid text-center jumbotron-container">
-        <h1 class="display-1 text-left font-weight-bold jumbo-h1">JOURNEY</h1>
+        <h1 class="display-1 break-word text-left font-weight-bold jumbo-h1">JOURNEY</h1>
         <h3 class="display-1 font-weight-bold jumbo-h3">TO</h3>
         <!-- <h4 class="text-center">Journey To</h4> -->
       </div>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>  <!-- /ABOUT -->   
-      <div id="portfolio"> <!-- PORTFOLIO --> 
+      <div id="portfolio" class="pt-5"> <!-- PORTFOLIO --> 
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
 
         <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"> <!-- Wepapp modalview --> 
@@ -115,8 +115,8 @@
                   <p class="word-wrap text-light">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
                     look at browsing history, get notification on things that needs to get done, and interract with other users via messaging. I built this web app with <span>HTML</span> for skeleton, <span>CSS</span> for design, <span>SASS</span>
                     for ease of organization & layout, & <span>JavaScript</span> for functionality.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click To Download Files</a>
+                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click For Github Repo</a>
                   </p>
                 </div>
               </div>
@@ -139,8 +139,8 @@
                     of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
                     Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
                     The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click To Download Files</a>
+                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click For Github Repo</a>
                   </p>
                 </div>
               </div>
@@ -161,8 +161,8 @@
                     On load; using <span>JavaScript,</span> the page communicates with a third party-API(randomuser.me) to grab information for 12 random “employees,” and use that data to build a 
                     prototype for an Awesome Startup employee directory. It requests a JSON object from the API using fetch and parse the data so that 12 employees are listed in a grid with their thumbnail image, 
                     full name, email, and location. Clicking the employee’s image or name will open a modal window with more detailed information, such as the employee’s birthday and address.
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click To Download Files</a></p>
+                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click For Github Repo</a></p>
                 </div>
               </div>
             </div>
@@ -181,9 +181,9 @@
                   <p class="word-wrap text-light">In this project, I created a browser version of "Wheel of fortune", a word guessing game where players will click letters from an
                      onscreen or physical keyboard to try to guess a random phrase. I create an array of phrases and write functions to choose a random phrase from that array, split 
                      the phrase into letters, and put those letters onto the game board, giving it the required functionalities using <span>JavaScript</span>. Built the skeleton/layout of the game app with
-                    <span>HTML</span>, style & design it with <span>CSS.    </span>
-                    <a class="d-block" href="" target="_blank">Click To View Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click To Download Files</a></p>
+                    <span>HTML</span>, style & design it with <span>CSS.</span>
+                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="" target="_blank">Click For Github Repp</a></p>
                 </div>
               </div>
             </div>
@@ -215,11 +215,12 @@
         </div> <!-- /PORTFOLIO --> 
 
         <div id="contact" class="contact text-center"> <!-- CONTACT --> 
-          <h3 class="display-2 text-center pt-5 font-weight-bold font-italic text-uppercase">GET IN TOUCH</h3>
-
-          <a class="text-center word-wrap d-block font-weight-bold text-dark text-uppercase" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
-          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mt-5 mr-3" src="images/linkedIn.png" alt=""></a>
-          <a href="https://github.com/osmankbk" target="_blank"> <img class="github mt-5 ml-3" src="images/github.png" alt=""></a>
+          <h3 class="display-2 text-center pt-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
+          <p class="display-4 mt-5 font-italic">Reach Me Via Social Media</p>
+          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mt-5 mr-3 mb-4" src="images/linkedIn.png" alt=""></a>
+          <a href="https://github.com/osmankbk" target="_blank"> <img class="github mt-5 ml-3 mb-4" src="images/github.png" alt=""></a>
+          <p class="display-4 mt-3 font-italic">Send Me An Email</p>
+          <a class="text-center display-4 text-wrap word-wrap d-block font-weight-bold text-dark text-uppercase" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
         </div> <!-- /CONTACK --> 
     </div> <!-- container -->
 
