Cleans up bootsrap margins & paddings, use custom instead

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <div class="jumbotron jumbotron-fluid"> <!-- jumbotron -->
       <div class="container-fluid text-center jumbotron-container">
-        <h1 class="display-1 break-word text-left font-weight-bold jumbo-h1">JOURNEY</h1>
-        <h3 class="display-1 font-weight-bold jumbo-h3">TO</h3>
+        <h1 class="break-word text-left font-weight-bold jumbo-h1">JOURNEY</h1>
+        <h3 class="font-weight-bold jumbo-h3">TO</h3>
         <!-- <h4 class="text-center">Journey To</h4> -->
       </div>
     </div> <!-- /jumbotron -->
@@ -57,7 +57,7 @@
       <div id="about">  <!-- ABOUT -->
         <div class="row">
           <div class="col-12  about-row">
-            <h3 class="display-2 text-center mt-5 font-weight-bold font-italic about-h3">MEET OSMAN</h3>
+            <h3 class="text-center mt-5 font-weight-bold font-italic about-h3">MEET OSMAN</h3>
             <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
@@ -66,10 +66,10 @@
               </p>
           </div>
         </div>
-        <h3 class="display-4 mb-5 text-center font-weight-bold font-italic about-h3">SKILLS</h3>
+        <h3 class="mb-5 text-center font-weight-bold font-italic about-h3">SKILLS</h3>
         <div class="row skills">
           <div class="col-lg order-lg-3">
-            <h3 class="mb-4 font-weight-bold">FRONTEND :</h3>
+            <h3 class="mb-4 font-weight-bold frontend">FRONTEND :</h3>
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action"><strong>JavaScript</strong></a>
               <a href="#" class="list-group-item list-group-item-action"><strong>HTML</strong></a>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="col-lg order-lg-3">
-            <h3 class="mb-4 font-weight-bold">BACKEND :</h3>
+            <h3 class="mb-4 font-weight-bold backend">BACKEND :</h3>
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong></a>
               <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong></a>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="col-lg order-lg-3">
-            <h3 class="mb-4 font-weight-bold">FUTURE LEARNINGS :</h3>
+            <h3 class="mb-4 font-weight-bold future">FUTURE LEARNINGS :</h3>
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong></a>
               <a href="#" class="list-group-item list-group-item-action"><strong>Ruby On Rails</strong></a>
@@ -216,11 +216,11 @@
 
         <div id="contact" class="contact text-center"> <!-- CONTACT --> 
           <h3 class="display-2 text-center pt-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
-          <p class="display-4 mt-5 font-italic">Reach Me Via Social Media</p>
-          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mt-5 mr-3 mb-4" src="images/linkedIn.png" alt=""></a>
-          <a href="https://github.com/osmankbk" target="_blank"> <img class="github mt-5 ml-3 mb-4" src="images/github.png" alt=""></a>
-          <p class="display-4 mt-3 font-italic">Send Me An Email</p>
-          <a class="text-center display-4 text-wrap word-wrap d-block font-weight-bold text-dark text-uppercase" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
+          <p class="display-4 mt-5 font-italic reach-me">Reach Me Via Social Media</p>
+          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt=""></a>
+          <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt=""></a>
+          <p class="display-4 mt-3 font-italic email-me">Send Me An Email</p>
+          <a class="text-center display-4 text-wrap word-wrap d-block font-weight-bold text-dark text-uppercase email" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
         </div> <!-- /CONTACK --> 
     </div> <!-- container -->
 
