--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <img class="rotate-img-div" src="images/wapp.png" alt="">
                 </div>
                 <div class="col-lg-6 wepapp-modal-view">
-                  <p class="word-wrap text-light">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
+                  <p class="word-wrap text-light modal-text">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
                     look at browsing history, get notification on things that needs to get done, and interract with other users via messaging. I built this web app with <span>HTML</span> for skeleton, <span>CSS</span> for design, <span>SASS</span>
                     for ease of organization & layout, & <span>JavaScript</span> for functionality.
                     <a class="d-block" href="" target="_blank">Click For Live Version</a>
@@ -134,7 +134,7 @@
                   <img class="rotate-img-div" src="images/fsk.png" alt="">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
-                  <p class="word-wrap text-light">Created a full-stack school database application, that users can interact with by getting a list of courses, 
+                  <p class="word-wrap text-light modal-text">Created a full-stack school database application, that users can interact with by getting a list of courses, 
                     view details for a specific course, as well as creating, updating, and deleting courses in the database. All is able to view any course, but the creation
                     of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
                     Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
@@ -157,7 +157,7 @@
                   <img class="rotate-img-div" src="images/emp.png" alt="">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
-                  <p class="word-wrap text-light">This is an employee directory I built using <span>HTML</span> and <span>CSS</span> to design and style it.
+                  <p class="word-wrap text-light modal-text">This is an employee directory I built using <span>HTML</span> and <span>CSS</span> to design and style it.
                     On load; using <span>JavaScript,</span> the page communicates with a third party-API(randomuser.me) to grab information for 12 random “employees,” and use that data to build a 
                     prototype for an Awesome Startup employee directory. It requests a JSON object from the API using fetch and parse the data so that 12 employees are listed in a grid with their thumbnail image, 
                     full name, email, and location. Clicking the employee’s image or name will open a modal window with more detailed information, such as the employee’s birthday and address.
@@ -172,13 +172,13 @@
         <div class="modal fade bd-rightexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content game-modal-content">
-              <h1 class="mb-4 text-center text-light pb-solid">Game Show App</h1>
+              <h1 class="mb-4 text-center text-light pb-solid modal-headings">Game Show App</h1>
               <div class="row modal-row">
                 <div class="col-lg-6 p-*-5 modal-view">
                   <img class="rotate-img-div popup-images" src="images/game.png" alt="">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
-                  <p class="word-wrap text-light">In this project, I created a browser version of "Wheel of fortune", a word guessing game where players will click letters from an
+                  <p class="word-wrap text-light modal-text">In this project, I created a browser version of "Wheel of fortune", a word guessing game where players will click letters from an
                      onscreen or physical keyboard to try to guess a random phrase. I create an array of phrases and write functions to choose a random phrase from that array, split 
                      the phrase into letters, and put those letters onto the game board, giving it the required functionalities using <span>JavaScript</span>. Built the skeleton/layout of the game app with
                     <span>HTML</span>, style & design it with <span>CSS.</span>
@@ -214,8 +214,8 @@
           </div>
         </div> <!-- /PORTFOLIO --> 
 
-        <div id="contact" class="contact text-center"> <!-- CONTACT --> 
-          <h3 class="display-2 text-center pt-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
+        <div id="contact" class="container-fluid contact text-center"> <!-- CONTACT --> 
+          <h3 class="display-2 text-center pt-3 pb-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
           <p class="display-4 mt-5 font-italic reach-me">Reach Me Via Social Media</p>
           <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt=""></a>
           <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt=""></a>
